add new trail post

--- a/blog/source/_posts/我的第一次半马体验.md
+++ b/blog/source/_posts/我的第一次半马体验.md
@@ -61,7 +61,7 @@ category: 运动-----自律给我自由
 
 ![虽然不是田协认证的比赛，但人气还是充足的。](https://github.com/Noah-wang/pictures/blob/main/picture/%E9%94%A6%E5%B7%9E%E9%A9%AC%E6%8B%89%E6%9D%BE/PreJinzhouRunning.jpg?raw=true)
 
-后面放一些摄影师拍摄的照片，一起来感受一下比赛的躁动和我的艰难。
+后面放一些摄影师拍摄的照片，一起来感受一下比赛的躁动和我的艰难，想起来比赛的时候有一件关于摄影师特别有趣的事。就在我们跑出去三四公里的时候，这时候一般都是整个比赛人员最密集的时候，所以后面跑的快的人就想从最侧面的空间提高速度。可是道路两边都是摄影师，我就听见了摄影师十分恐惧的坐在地上，边后退边恐惧的喊：“离我远点！”
 
 ![刚开始跑的时候](https://github.com/Noah-wang/pictures/blob/main/picture/%E9%94%A6%E5%B7%9E%E9%A9%AC%E6%8B%89%E6%9D%BE/JinzhouRunning1.jpg?raw=true)
 
