--- a/blog/source/_posts/越野赛初体验.md
+++ b/blog/source/_posts/越野赛初体验.md
@@ -12,4 +12,16 @@ category: 运动-----自律给我自由
 
 这次我们比赛的地点是香八拉这条线，这条线是北京有名的徒步路线，途径香山，西山，八大处等地。难度不大，所以很受欢迎。我们的比赛组别是15公里，700米爬升，这个数量在越野赛里其实不算大，但对于我只参加过路跑比赛的人来说，已经算是半马级别的比赛了。越野赛里有一个换算机制，就是100米爬升相当于一公里，所以相当于一个22公里的路跑比赛。
 
-![比赛数据](https://github.com/Noah-wang/pictures/blob/main/picture/%E8%B6%8A%E9%87%8E/IMG_6593.JPG?raw=true)
+![比赛数据](https://raw.githubusercontent.com/Noah-wang/pictures/refs/heads/main/picture/%E8%B6%8A%E9%87%8E/TrailData.JPG)
+
+从整个数据路线图上来看，路线是围绕着山在跑的。从这个图上就能感觉到路跑和越野不一样的地方。一般路跑都是比较规整的路线，但是越野跑的路线像一个圆环。虽然爬升只有700m，但我也感觉到了爬升带来的温度降低。另一个不同的是，长距离的爬升更加难以坚持，所以你不得不走。那一起来欣赏一下摄影师拍的照片，这次由于是小比赛，参赛者比较稀疏，摄影师有更多的时间调整，所以拍的角度和取景更加的好。
+
+![比赛照片](https://raw.githubusercontent.com/Noah-wang/pictures/refs/heads/main/picture/%E8%B6%8A%E9%87%8E/TrailPhoto1.JPG)
+
+![比赛照片](https://raw.githubusercontent.com/Noah-wang/pictures/refs/heads/main/picture/%E8%B6%8A%E9%87%8E/TrailPhoto2.JPG)
+
+
+
+最后我也是顺利的完成了比赛，拿到了比赛证书。我想，这算是我越野体验的一个起点，看着去参加越野赛更高组别的人和景，对那种体验有无限的向往，我可能会感到艰难，我可能会精疲力竭，甚至退赛，但这一种体验是马拉松和半马赛事所不具备的。希望2025年我能够参加一场正式的，长距离的越野赛，感受身体所能带来的更好的景色。
+
+![完赛证书](https://raw.githubusercontent.com/Noah-wang/pictures/refs/heads/main/picture/%E8%B6%8A%E9%87%8E/TrailCertificate.JPG)
