add new progress for 开发日志

--- a/blog/source/_posts/开发日志.md
+++ b/blog/source/_posts/开发日志.md
@@ -8,9 +8,19 @@ category: 开发-----记录，学习，分享
 
 ### 开发日志
 
+#### 网页端
+
+##### 2024.11.14
+
+为PriceScout添加更多功能！
+
+**搜索历史记录**：可以浏览或者单击选择搜索过的设置
+**已选择网站显示**：在搜索栏下方显示已经添加了的网页
+**固定搜索栏**：随着更多的网站被添加进来，网页需要向下滚动，添加了固定的搜索栏当网页滚动到下方，无需回到顶端搜索
+
 #### 苹果端
 
-#### 2024.11.13
+##### 2024.11.13
 
 今天我下载了Swift Playground，试图开始学习Swift。
 
