--- a/blog/source/_posts/开发日志.md
+++ b/blog/source/_posts/开发日志.md
@@ -18,6 +18,14 @@ category: 开发-----记录，学习，分享
 **已选择网站显示**：在搜索栏下方显示已经添加了的网页
 **固定搜索栏**：随着更多的网站被添加进来，网页需要向下滚动，添加了固定的搜索栏当网页滚动到下方，无需回到顶端搜索
 
+##### 2024.11.18
+
+修复PriceScout bugs
+
+修复图片不正确显示的bug
+
+修复网站不正确的搜索域名
+
 #### 苹果端
 
 ##### 2024.11.13
