--- a/blog/source/_posts/开发日志.md
+++ b/blog/source/_posts/开发日志.md
@@ -37,3 +37,7 @@ category: 开发-----记录，学习，分享
 预定了明年二月份的**Swift Student Challenge**，现在的我一片茫然，不知道我会完成什么样
 
 ![SwiftStudentChallenge](https://github.com/Noah-wang/pictures/blob/main/picture/%20%E5%BC%80%E5%8F%91%E6%97%A5%E5%BF%97/20241113/SwiftStudentChallenge01.png?raw=true)
+
+##### 2025.1.1
+
+正在学习UIKit，马上就要转到SwiftUI了，这个日志老忘了写....以后要养成习惯
