--- a/blog/source/_posts/2025年开始.md
+++ b/blog/source/_posts/2025年开始.md
@@ -1,7 +1,7 @@
 ---
 title: 2025年开始更新了
 date: 2025-01-01 19:43:24
-index_img: https://png.pngtree.com/png-clipart/20231004/original/pngtree-happy-new-year-2025-vector-png-image_13259017.png
+index_img: https://github.com/Noah-wang/pictures/blob/main/picture/2025.jpg?raw=true
 excerpt: 2024年结束了，我的大学生活也结束了
 category: 随笔-----生活中冒出的小火花
 ---
@@ -10,6 +10,7 @@ category: 随笔-----生活中冒出的小火花
 
 现在我是在北京写这一篇文章的，随着2024年冬季学期的结束，我也是毕业了，参加了毕业典礼
 
-![毕业典礼]()
+![毕业典礼](https://github.com/Noah-wang/pictures/blob/main/picture/%E6%AF%95%E4%B8%9A%E5%85%B8%E7%A4%BC.jpg?raw=true)
 
 新的一年希望能有更多惊喜吧
+
