--- a/blog/source/_posts/北京马拉松.md
+++ b/blog/source/_posts/北京马拉松.md
@@ -107,6 +107,6 @@ category: 运动-----自律给我自由
 
 #### 尾巴
 
-从1981年的初啼到如今享誉全球的白金标盛事，北京马拉松不仅是中国马拉松运动发展的缩影，更是无数跑者心中的“国马”朝圣之旅。这条从天安门广场出发，贯穿长安街，最终抵达奥运圣地的经典赛道，让奔跑本身就充满了仪式感和历史厚重感。北京这座城市有着不同于中国其他一线城市风格，从天安门开始到鸟巢，仿佛是见证着这座城市的变化。
+从1981年的初啼到如今享誉全球的金标盛事，北京马拉松不仅是中国马拉松运动发展的缩影，更是无数跑者心中的“国马”朝圣之旅。这条从天安门广场出发，贯穿长安街，最终抵达奥运圣地的经典赛道，让奔跑本身就充满了仪式感和历史厚重感。北京这座城市有着不同于中国其他一线城市风格，从天安门开始到鸟巢，仿佛是见证着这座城市的变化。
 
 希望这份【赛事档案馆】关于北京马拉松的记录，不仅能让你全面了解这场伟大赛事的前世今生与赛道特点，更能点燃你将跑步与旅行结合的热情，去规划一趟属于自己的、精彩纷呈的北京跑马之旅。
