--- a/blog/source/_posts/银川马拉松.md
+++ b/blog/source/_posts/银川马拉松.md
@@ -9,3 +9,17 @@ category: 运动-----自律给我自由
 ## 「西夏古都」银川马拉松
 
 自黄河奔腾不息的古老土地上，一座年轻的马拉松赛事悄然崛起，以其独特的魅力和不懈的追求，在中国的路跑版图上刻下了深刻的印记。这便是银川马拉松，一项诞生于“塞上湖城”的体育盛事。它不仅是速度与耐力的较量，更是一部展现城市风貌、凝聚人文精神、推动区域发展的奔跑史诗。
+
+### 它可能才是中国的第一场马拉松
+
+当我们谈论中国马拉松的起源，很多人会立刻想到1981年那场具有里程碑意义的北京国际马拉松赛。它因其深远的影响力，长期以来被广泛认为是“国内首个马拉松赛”。然而，历史的卷轴缓缓展开，一段更早的记忆逐渐清晰——那是在遥远的1959年，塞上江南银川，一场同样承载着激情与汗水的马拉松赛，可能才是新中国马拉松的真正序章。
+
+“当年在银川确实举办了一场马拉松赛。当时为了庆祝宁夏回族自治区成立一周年，也为了选拔人才，那阵还没有教练也没有专业队。”
+
+——丁成任自治区体委群体处处长。
+
+据丁老回忆，1959年的那场马拉松赛，是为了庆祝宁夏回族自治区成立一周年，同时肩负着为体育事业选拔人才的任务。在那个专业教练和队伍尚不普及的年代，这场赛事点燃了民众的运动热情。
+
+比赛当天，超过800名参赛者从自治区体育场（现银川体育馆附近）出发，沿着当时的石子路，一路向南奔向永宁县城，再折返回起点，全程长达42公里。可以想象，在那个物质条件相对匮乏、道路状况也远不如今日的年代，选手们在崎岖不平的石子路上奔跑，是何等艰辛与不易。
+
+###
