update the content of 开发日志

--- a/blog/source/_posts/开发日志.md
+++ b/blog/source/_posts/开发日志.md
@@ -10,7 +10,7 @@ category: 开发-----记录，学习，分享
 
 创建项目，使用Expo搭建
 
-npm start进行启动![image-20250527101923641](/Users/noahwang/Library/Application Support/typora-user-images/image-20250527101923641.png)
+npm start进行启动![搭建页面](https://github.com/Noah-wang/noah-wang.github.io/blob/hexo/%E7%85%A7%E7%89%87/%E5%BC%80%E5%8F%91%E6%97%A5%E5%BF%97%E5%9B%BE%E7%89%87.png?raw=true)
 
 
 
